# dkvae

./: .gitignore  bank.py  config.py  main.py  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py  train.py
model/: model-2latentspace.h5
models/: CGAN.py
notebooks/: AudioSignalProcessing.ipynb  loading_data.ipynb
src/: bank.py
src/models/: CGAN.py  autoencoder.py  variationalautoencoder.py
