[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project]
name = "vaedg"
authors = [
    {name = "Martin Sanchez Pueyo", email = "martinsanchezpueyo@gmail.com"},
]
description = "VAEDG (Variational AutoEncoder Drum Generation) is an audio generation tool based on variational autoencoders."
readme = "README.md"
requires-python = "=3.7.16"
keywords = ["one", "two"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version"]