[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "VKVAE"
version = "1.0.0"
authors = [
    {name = "Nartin Sanchez Pueyo", email = "martinsanchezpueyo@gmail.com"},
]
description = "A VAE-based drum machine."
readme = "README.md"
requires-python = "~=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "keras==2.12.0",
    "librosa==0.10.0",
    "numpy==1.22.4",
    "pandas==1.5.3",
    "soundfile==0.12.1",
    "tensorflow==2.12.0"
]

[tool.flit.module]
name = "src/"